// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<P/> renders default 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Paragraph__P-sc-1weuljs-0",
        "isStatic": true,
        "rules": Array [
          "width:65%;",
        ],
      },
      "displayName": "Paragraph__P",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Paragraph__P-sc-1weuljs-0",
      "target": "p",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`<PAlt /> renders default 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Paragraph__PAlt-sc-1weuljs-2",
        "isStatic": true,
        "rules": Array [
          "margin:0;padding:0;",
          "display:flex;align-items:center;justify-content:flex-end;",
        ],
      },
      "displayName": "Paragraph__PAlt",
      "foldedComponentIds": Array [
        "Paragraph__PClean-sc-1weuljs-1",
      ],
      "render": [Function],
      "styledComponentId": "Paragraph__PAlt-sc-1weuljs-2",
      "target": "p",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;

exports[`<PClean /> renders default 1`] = `
<StyledComponent
  forwardedComponent={
    Object {
      "$$typeof": Symbol(react.forward_ref),
      "attrs": Array [],
      "componentStyle": ComponentStyle {
        "componentId": "Paragraph__PClean-sc-1weuljs-1",
        "isStatic": true,
        "rules": Array [
          "margin:0;padding:0;",
        ],
      },
      "displayName": "Paragraph__PClean",
      "foldedComponentIds": Array [],
      "render": [Function],
      "styledComponentId": "Paragraph__PClean-sc-1weuljs-1",
      "target": "p",
      "toString": [Function],
      "warnTooManyClasses": [Function],
      "withComponent": [Function],
    }
  }
  forwardedRef={null}
/>
`;
